# OpenGL

OpenGLTest/: .gitignore  CMakeLists.txt  glad.c  main.cpp
OpenGLTest/glad/: glad.h
VertexTest/: CMakeLists.txt  glad.c  main.cpp
